@@ -4,20 +4,26 @@ Hash: SHA256
 AUX pcsxr-1.9.94-disable-sdl2.patch 1059 SHA256 7be3baa643513cee92fa908c6ae529c5f953a24f0ce7a01fc602fbba0381897e SHA512 aa010d8203a45ddd7f93fcc74d3ec9010dcdf6a79d36bb72aa434caccac650c2dee5a74e52e11e40b35356ca30d9a37a52b5e76dcacba64634988b9e57c74171 WHIRLPOOL 6cd5224095001b48ac922ffa8bcb3f3a749edb4540e8b1a4d404835b4f391a3b63c2fa1d25725c01bf83c9b919fdf78d16b2f2fc1f404c37c9d96848f6f8bfce
 AUX pcsxr-1.9.94-install-paths.patch 7343 SHA256 88c95173a5798c1796e1cdad4116eb221c1ce3c47b6a5c2bc60bfc1e6e358a59 SHA512 fcff961ef5e88ba8af2dc7adc160c5b79c1908379e6bd7beb6669bfb7fa8a3e7596b88cbe8c1dde06ac320c4ea725806f19e8c10d1c1197345251c104c354916 WHIRLPOOL 71c114941128941b9980d23072334124884344b9ebc7591308cc96c15ddb4d8737ee014b755142a9ddc3544d0191f6aca787ea210dd4b09bc0590efc8b9798f7
 DIST pcsxr-1.9.94.zip 2631125 SHA256 291941eebe695d9133539783dee208fce9d7419f0042964f96bf10ce3eee9fa3 SHA512 c49471c27692fbf22da32d2f5697a1dfed3dbdbfdb86cb789b0ea6cddb2a7da4f3390e4568f4e9385bf30d6baff0f2a591a80f424cf0c640cae0035ba81dce39 WHIRLPOOL 8095fda6821cb7549574f8ff97d75d34350317f0e71ce27f9c540244ca66d3419c1aa4bdac91142cd7304daa7d56689565417f7203eb67f605c81727859a7cea
+EBUILD pcsxr-1.9.94-r1.ebuild 2695 SHA256 1e09976b3b2e2da26495ae19f3d66763ce920837dd3acb5dee1a2768aa085808 SHA512 a1b3debb97681795c23ed71df5657ae37b6cf58737a792c59ad46077dd2a702e5ab5f2d45dcdea20013528420fe49f59d5eff7faaf006e30c2a477f079e72d58 WHIRLPOOL 19d959ea8df23d298ccf6ce2b385774bf6392b5da75d872aacbc3bfe18e12c13ec8963101f1772c0f311fcafe31567a90e6937168c52b0b9c6a55026af5c279e
 EBUILD pcsxr-1.9.94.ebuild 2320 SHA256 19e8b6b97435ac22e07b33d85d38d6d812c1b4b3d599ee52e5d36f420768c282 SHA512 bd0dcbf585ebba47a3c75c596ee1092aa8ee77a9a271ae8d2c71b6efccd53f30b71f52bac72a9b6ebccade85b2dda4af585b1518c19cf3de02f5c81090958ea6 WHIRLPOOL db518a9dcbe4ff9295a5c73dd60e02d8db1e322808f28e2988e6d15d9f8c81b901ed69e2a79221658fa1e7a90c57c07e2c7973791b8f11c2dbfdb50656f934f4
-MISC ChangeLog 748 SHA256 da4c5f2b7f6c0ee366f0728b35ebd95d95a252327f205028261298d3efe7f50a SHA512 10acb91cdf95cdce05a1be2f83e33fe131eb411cbbd286ed6b856e99dd65c848dae805c3f2a6332d9ce7a2cb9d50930b9b19cb49693fc1528081d3094c798742 WHIRLPOOL 6c5b2fc7e88519138f28112160d6339a97374cd3f026edfbe15cbec22cb036e54915d2ed9dc8681dcb473b414712e2ad61f8ed444bc8f9207f28da39d2f6eae8
-MISC metadata.xml 416 SHA256 4f7d5ac6ae0ded3af2f577e71e2d80ae55d91a106a848cdfd67a80a45671f6de SHA512 41b900eceb08da6ba79a050d0e7b96264a07ffdcaa566c78e8572d6800e1fdead411cc85b2645c6c7120cb2e356defa695d57160d7cfb6c24ac923a52294f34a WHIRLPOOL fb4e312b7da6b62db77075c17e25116e4fadb09d3dfc4e17ee12250f0fe036d28b8b324e674c8395a46f19cf61d97ac5468ea77ea6cf6199a6255002d2362ee0
+MISC ChangeLog 966 SHA256 93c544d8377f180ed84b735fb60c382610bd3af682e4bccad70f18b273928962 SHA512 7aa2c1fc7d448a2c97876b2143b52388c3d24f92d83573ddb694cc96f55994d3d850de24e9f6c5bed8f1d70b4a0273f2be9dc0923e6b13a7a9141485f08ac8fa WHIRLPOOL cc818bf03f6524acb6f59ac9d6e7cb646e9d3a44469e1f50f32e1e57e37afa269774b0e4f93e4cebf75acfb4cc4e937426cec67090cf050fef9a1d8d64d6cffb
+MISC metadata.xml 396 SHA256 ee68a338382fa36a2cc35201040ece4f69b1bba3f000346e61b721b3d5ff233a SHA512 a646db97794e31520534ba3ea9990fb27b9b675ab4139b510da354415e5dc9ee89a93eb696d82d182b3da1e1c38e5f14affdf89e103105a9615c85d19a9daa23 WHIRLPOOL ba0435c32d1811847ffa5801912360ba5fa1a416924e8ee71b5d7df240e760f1635985c7673ba5daa9544fe801ff42a0cdc83cd081be4a4904e651c7b39d5a08
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (GNU/Linux)
+Version: GnuPG v2
 
-iQGcBAEBCAAGBQJTdO3OAAoJEJQzkH1pP7W4dEoL/0YCh90+e7jDXYc+lh2JS4Tf
-DboJtgPyWPcbliG8FBMll3rM3KROIrD/q0vA8/pJdmDSOT3hO34JAOSM4tXKzp9y
-R7gZpo0yZj11nI3yFsW+k76OtctKTMSi6Oqg4/JQAHdJVPIu5Ce5Klv+GPWWyH52
-Jk4kUWnhTxIGC/130WlU5S5aiOuwsLBwJlh6zTwzMtatLSWTrwzMtCHzLBT7Oyks
-taTEhFc027I5dj6q11vG5W3Z7fEwcuk88kmt+cAz4bKc4CoF5LbC1R9cm/daxQ4a
-F+Kg5xmARcBqzN+qYG6SXczyjGulHk2gJ5xhXZK7lfoubw+MyBf1HEnF6usiBy/O
-+Xg/fipwSrd7YhK7KB6u/BNFcbqmgFauhTGIJCsWEVpqfOPxBWV3vkIV42ukifg+
-Dx9uD7fRE78VYeJnWqZfpG8JOZnpazZ0tNfXUPfJNbWXtNrHIeufZeoXkdTNcj2P
-LsTSRu0k9/R3vrggHGdQsa6DL06mb2ehauIZzxNf6g==
-=PVui
+iQJ8BAEBCABmBQJT7JGjXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ2REJCMDdDQzRGMERBRDA2RUEwQUZFNDFC
+MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZOR+0P/0Q59QPwtGL7hI8MuoOxR7aR
+OmLSE7FR/63b+kSEZUBvZm5g4jq2dAnbUnDiCPLLMoL+lSd8q9UEWcaIbK4LkiOh
+QscJHOGiJFwoQ/meEEmpCzNwsBz2o1pN1eEogSA4Tf17h4DmgC5txw72hK4hcHv/
+as2w3ETKWUboIzpyrpDWhGxwsBGyol4txxkwO7mYGLkfpnbudKseWMH4phLJddwl
+GTluPOI/3LEZYroZN7vziKX4wFaPwvQvI6UlrC3XlEbOKgoYFWmSfvHS4lPIWQcv
+eXFPmdDvqEGMSyOxRKUi5ySjDLaYEviWuDZbuRfk2SjA1Xwwo9bcMxdwlFGOnG9w
+wtdRAFL7RVl1cxboQxC7rsYDE/RoDh/KaLNB8XJlfxkDnfk/gOFFZMNEn4DK03WD
+gdw8mP+8nw8zp9eV9uC/V6eonjDIgHbZ2Qpl8jO5vAlpxcPa03BooTGUqGwfd7M/
++owV4i1ufaPTVw/ZEK5eh2Ysr7hj8PCwDLfAMPigd6LUlewn6MFfg5PJdJayF6tB
+awaHLetDks7GfulZL5h6Q6ytJRRy65uG/ExMHMAIw6SD7ryxZECBFwc1iQuJB0O/
+CVoV4gpHV+zW6yga6DJWJTo07pzgotJbYdzK4u7ITnVm8h8enmtPVYspN/IBVbDB
+Dhfbzd0IsYwaUCeqIulO
+=22EH
 -----END PGP SIGNATURE-----
