@@ -1,0 +1,15 @@
+DEFINED_PHASES=configure install postinst prepare
+DEPEND=dev-libs/glib:2= media-libs/libsdl:0=[joystick] sys-libs/zlib:0= x11-libs/gtk+:3= x11-libs/libX11:0= x11-libs/libXext:0= x11-libs/libXtst:0= x11-libs/libXv:0= alsa? ( media-libs/alsa-lib:0= ) cdio? ( dev-libs/libcdio:0= ) ffmpeg? ( virtual/ffmpeg:0= ) nls? ( virtual/libintl:0= ) openal? ( media-libs/openal:0= ) opengl? ( virtual/opengl:0= x11-libs/libXxf86vm:0= ) pulseaudio? ( media-sound/pulseaudio:0= ) sdl? ( media-libs/libsdl:0=[sound] ) app-arch/unzip dev-util/intltool x11-proto/videoproto nls? ( sys-devel/gettext:0 ) x86? ( dev-lang/nasm ) !<sys-devel/gettext-0.18.1.1-r3 || ( >=sys-devel/automake-1.13:1.13 >=sys-devel/automake-1.14:1.14 ) >=sys-devel/autoconf-2.69 sys-devel/libtool
+DESCRIPTION=PCSX-Reloaded: a fork of PCSX, the discontinued Playstation emulator
+EAPI=5
+HOMEPAGE=http://pcsxr.codeplex.com
+IUSE=alsa cdio ffmpeg nls openal opengl oss pulseaudio +sdl
+KEYWORDS=~amd64
+LICENSE=GPL-2 public-domain
+RDEPEND=dev-libs/glib:2= media-libs/libsdl:0=[joystick] sys-libs/zlib:0= x11-libs/gtk+:3= x11-libs/libX11:0= x11-libs/libXext:0= x11-libs/libXtst:0= x11-libs/libXv:0= alsa? ( media-libs/alsa-lib:0= ) cdio? ( dev-libs/libcdio:0= ) ffmpeg? ( virtual/ffmpeg:0= ) nls? ( virtual/libintl:0= ) openal? ( media-libs/openal:0= ) opengl? ( virtual/opengl:0= x11-libs/libXxf86vm:0= ) pulseaudio? ( media-sound/pulseaudio:0= ) sdl? ( media-libs/libsdl:0=[sound] )
+REQUIRED_USE=?? ( alsa openal oss pulseaudio sdl )
+RESTRICT=test
+SLOT=0
+SRC_URI=http://dev.gentoo.org/~mgorny/dist/pcsxr-1.9.94.zip
+_eclasses_=autotools	ebea507d219855923e3438c953cf4ab8	eutils	06133990e861be0fe60c2b428fd025d9	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	multiprocessing	d7f2985a2c76c365ee20269db5261414	toolchain-funcs	0f1760274637a138b99bb649202ea402	versionator	cd0bcdb170807e4a1984115e9d53a26f
+_md5_=0c8f9d7b6b7d002d808403e27d82242f
