@@ -1,6 +1,13 @@
 # ChangeLog for games-emulation/pcsxr
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-emulation/pcsxr/ChangeLog,v 1.3 2014/05/15 16:39:28 ulm Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-emulation/pcsxr/ChangeLog,v 1.4 2014/08/14 10:37:38 mgorny Exp $
+
+*pcsxr-1.9.94-r1 (14 Aug 2014)
+
+  14 Aug 2014; Michał Górny <mgorny@gentoo.org> +pcsxr-1.9.94-r1.ebuild,
+  metadata.xml:
+  Remove the games team following the Council decision. Restore upstream install
+  layout.
 
   15 May 2014; Ulrich Müller <ulm@gentoo.org> pcsxr-1.9.94.ebuild:
   Fix USE dependency on media-libs/libsdl, "audio" USE flag was renamed to
